Replace the old C fetcher with a Perl script which recursively retrieves the specified URLs using multiple paralell clients.
git-svn-id: http://varnish-cache.org/svn/trunk@1641 d4fa192b-c00b-0410-8231-f00ffab90ce4

--- a/varnish-tools/fetcher/Makefile
+++ b/varnish-tools/fetcher/Makefile
@@ -2,8 +2,10 @@
 # $Id$
 #
 
-PROG	 = fetcher
-WARNS	?= 6
-MAN	 =
+PREFIX?=	${HOME}
+BINDIR?=	${DESTDIR}${PREFIX}/bin
 
-.include <bsd.prog.mk>
+all:
+
+install:
+	install -m 0755 fetcher.pl ${BINDIR}/fetcher
