--- a/varnish-tools/webgui/example.conf
+++ b/varnish-tools/webgui/example.conf
@@ -4,7 +4,7 @@
 port=8000
 # 'poll_intervall' is the polling interval for the statistics
 poll_interval=5,
-# 'restricted' gives a restricted version of the web GUI, disabling the user
+# 'restricted' gives a restricted version of the web UI, disabling the user
 # from changing any values
 restricted=0
 # 'graph_width' and 'graph_height' are width and height for the graphs in 'View stats'
@@ -14,7 +14,7 @@ graph_height=125,
 # when clicking a stat graph in 'View stats'
 large_graph_width=1000
 large_graph_height=500
-# 'log_filename' is the filename to log errors and information about actions done in the GUI
+# 'log_filename' is the filename to log errors and information about actions done in the UI
 log_filename=/opt/varnish/webui/varnish.log
 # 'db_filename' is the sqlite3 database created with the SQL outputed from create_db_data.pl
 db_filename=/opt/varnish/webui/varnish.db
